# hackaton-atilla

./: .gitignore  CMakeLists.txt  README.md  test.c  waaly2.py
src/: carte.py  classes.py  coffre.py  combat.py  competences.py  creature.py  design.txt  design_armes.txt  design_armures.txt  design_region.txt  echoppe.py  entitee.py  game.py  joueur.py  main.py  objet.py  pnj.py  race.py  region.py  sorts.py  waaly.py
src/c/: affichage.c  affichage.h  classes.h  main.c  main.h
src/cpp/: character.cpp  character.hpp  main.cpp  main.hpp
src/level_data/: map.tmx
src/level_data/csv/: map_houses.csv  map_tile.csv  map_walls.csv
src/tilesets/: Cliff_Tile.tsx  Free_Chicken_House.tsx  Grass.tsx  Hills.tsx  TX Tileset Grass.tsx  TilesetFloor.tsx  Tilled_Dirt.tsx  cave_.tsx  desert_.tsx  items.tsx  taiga_.tsx  tundra_.tsx  wall.tsx
